--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <div>
         <div>
              <span style="margin: 0 20%; font-size: 1.5em; font-weight: bold;">Score : <span id="score"></span></span>
-             <span style="margin: 0px 10%;font-size: 1.5em;font-weight: bold;">Level : <span id="level"></span></span>
+             <!-- <span style="margin: 0px 10%;font-size: 1.5em;font-weight: bold;">Level : <span id="level"></span></span> -->
         </div>
          <div>
              <canvas id="game" style="margin: 0 20%;background-color:black"></canvas>
          </div>
-         <div style="display : none"> <img id="pause" width="500" height="150" src="paused.jpg" alt="Paused"> </div>
+         <div style="display : none"> <img id="pause" src="paused.jpg" alt="Paused"> </div>
 </div>
-<script src="game-deploy.js"></script>
-<!-- <script src="game.js"></script>-->
+<!-- <script src="game-deploy.js"></script> -->
+<script src="game.js"></script>
