--- a/box.html
+++ b/box.html
@@ -2,6 +2,11 @@
         <div>
              <span style="margin: 0 20%; font-size: 1.5em; font-weight: bold;">Score : <span id="score"></span></span>
              <!-- <span style="margin: 0px 10%;font-size: 1.5em;font-weight: bold;">Level : <span id="level"></span></span> -->
+             <span style="float: right;margin: 2px 5%;">
+                 <div id="max" style="background-color : black; width: 200px; height : 30px">
+                 <div id="remainingLife" style="background-color : red; width : 20%; height : 100%"></div>
+             </div>
+            </span>
         </div>
          <div>
              <canvas id="game" style="margin: 0 20%;background-color:black"></canvas>
@@ -9,4 +14,4 @@
          <div style="display : none"> <img id="pause" src="paused.jpg" alt="Paused"> </div>
 </div>
 <!-- <script src="game-deploy.js"></script> -->
-<script src="game.js"></script>
+<script src="box.js"></script>
