--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
              <span style="padding: 6%; font-size: 1.5em; font-weight: bold;">Hi : <span id="highest"></span></span>
              <!-- <span style="margin: 0px 10%;font-size: 1.5em;font-weight: bold;">Level : <span id="level"></span></span> -->
              <span style="float: right;">
-                 <div id="max" style="background-color : black; width: 200px; height : 30px">
-                     <div id="remainingLife" style="background-color : red; width : 100%; height : 100%"></div>
+                 <div id="max" style="background:linear-gradient(to right, red , yellow, green);width: 200px; height : 30px">
+                     <div id="remainingLife" style="background-color : black;  width : 0%; height : 100%; float :right"></div>
                  </div>
             </span>
         </div>
