--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div>
-        <div style="margin-right: 33%;margin-left: 20%;margin-bottom: 3px;">
+        <div style="margin-right: 42%;margin-left: 20%;margin-bottom: 6px;">
              <span style="font-size: 1.5em; font-weight: bold;">Score : <span id="score"></span></span>
              <span style="padding: 6%; font-size: 1.5em; font-weight: bold;">Hi : <span id="highest"></span></span>
              <!-- <span style="margin: 0px 10%;font-size: 1.5em;font-weight: bold;">Level : <span id="level"></span></span> -->
@@ -8,15 +8,15 @@
                      <div id="remainingLife" style="background-color : black;  width : 0%; height : 100%; float :right"></div>
                  </div>
             </span>
-        </div>
+         </div>
          <div>
              <canvas id="game" style="margin: 0 20%;background-color:black"></canvas>
          </div>
          <div style="display : none">
-              <img id="pause" src="paused.jpg" alt="Paused">
+            <img id="background" src="bg.jpg" alt="GameOver"> 
+             <!-- <img id="pause" src="paused.jpg" alt="Paused">
               <img id="gameover" src="Game_Over.jpg" alt="GameOver"> 
-              <img id="background" src="bg1.jpg" alt="GameOver"> 
-              <img id="obstacle" src="obstacle.jpg" alt="GameOver">               
+              <img id="obstacle" src="obstacle.jpg" alt="GameOver">                -->
         </div>
 </div>
 <script type="application/javascript">
