--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
         <div style="margin-right: 42%;margin-left: 20%;margin-bottom: 6px;">
              <span style="font-size: 1.5em; font-weight: bold;">Score : <span id="score"></span></span>
              <span style="padding: 6%; font-size: 1.5em; font-weight: bold;">Hi : <span id="highest"></span></span>
-             <!-- <span style="margin: 0px 10%;font-size: 1.5em;font-weight: bold;">Level : <span id="level"></span></span> -->
              <span style="float: right;">
-                 <div id="max" style="background:linear-gradient(to right, red , yellow, green);width: 200px; height : 30px">
-                     <div id="remainingLife" style="background-color : black;  width : 0%; height : 100%; float :right"></div>
+                 <div id="max" style="background:linear-gradient(to right, red,green);width: 200px; height : 30px">
+                     <div id="remainingLife" style="background-color : rgb(97, 126, 122);  width : 0%; height : 100%; float :right"></div>
                  </div>
             </span>
          </div>
@@ -14,9 +13,6 @@
          </div>
          <div style="display : none">
             <img id="background" src="bg.jpg" alt="GameOver"> 
-             <!-- <img id="pause" src="paused.jpg" alt="Paused">
-              <img id="gameover" src="Game_Over.jpg" alt="GameOver"> 
-              <img id="obstacle" src="obstacle.jpg" alt="GameOver">                -->
         </div>
 </div>
 <script type="application/javascript">
