--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
          <canvas id="game" style="margin: 0 20%;background-color:black"></canvas>
      </div>
      <div style="display : none">
-        <img id="background" src="bg.jpg" alt="GameOver"> 
+        <img id="background" src="./src/bg.jpg" alt="GameOver"> 
     </div>
 </div>
 <script type="application/javascript">
