--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img id="background" src="./src/bg.jpg" alt="GameOver"> 
     </div>
 </div>
-<script type="application/javascript">
+<script id="dynamic" type="application/javascript">
 function loadJS(file) {
     var jsElm = document.createElement("script");
     jsElm.type = "application/javascript";
