box both velocity

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
          <span style="font-size: 1.5em; font-weight: bold;">Score : <span id="score"></span></span>
          <span style="padding: 6%; font-size: 1.5em; font-weight: bold;">Hi : <span id="highest"></span></span>
          <span style="float: right;">
-             <div id="max" style="background:linear-gradient(to right, rgb(0, 255, 187),yellow);width: 200px; height : 30px">
+             <div id="max" style="background:linear-gradient(to right, rgb(95, 3, 3),#f30303);width: 200px; height : 30px">
                  <div id="remainingLife" style="background-color : rgb(97, 126, 122);  width : 0%; height : 100%; float :right"></div>
              </div>
         </span>
