--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
          <canvas id="game" style="margin: 0 20%;background-color:black"></canvas>
      </div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
 <script id="dynamic" type="application/javascript">
 function loadJS(file) {
     var jsElm = document.createElement("script");
