--- a/index.html
+++ b/index.html
@@ -1,24 +1,10 @@
-<div>
-    <div style="margin-right: 33%;margin-left: 20%;margin-bottom: 6px;">
-         <span style="font-size: 1.5em; font-weight: bold;">Score : <span id="score"></span></span>
-         <span style="padding: 6%; font-size: 1.5em; font-weight: bold;">Hi : <span id="highest"></span></span>
-         <span style="float: right;">
-             <div id="max" style="background:linear-gradient(to right, rgb(95, 3, 3),#f30303);width: 200px; height : 30px">
-                 <div id="remainingLife" style="background-color : rgb(97, 126, 122);  width : 0%; height : 100%; float :right"></div>
-             </div>
-        </span>
-     </div>
-     <div>
-         <canvas id="game" style="margin: 0 20%;background-color:black"></canvas>
-     </div>
+<div style="padding : 0% 20%;">
+<span>
+    <img width="300" height="300" src="./images/flappy_thumbnail.png" />
+    <span style="background-color: beige; position: absolute; width: 300px; height: 300px; left: 125px; opacity: 0.4;"></span>
+</span>
+<span>
+      <img width="300" height="300" src="./images/pacman_thumbnail.png" />
+      <span style="background-color: beige; position: absolute; width: 300px; height: 300px; left: 125px; opacity: 0.4;"></span>
+</span>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
-<script id="dynamic" type="application/javascript">
-function loadJS(file) {
-    var jsElm = document.createElement("script");
-    jsElm.type = "application/javascript";
-    jsElm.src = file;
-    document.body.appendChild(jsElm);
-}
-loadJS("./dist/bundle.js");
-</script>
