--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <div style="padding : 0% 20%;">
 <span>
-    <img width="300" height="300" src="./images/flappy_thumbnail.png" />
-    <span style="background-color: beige; position: absolute; width: 300px; height: 300px; left: 125px; opacity: 0.4;"></span>
+    <a href="/flappy"><img width="300" height="300" src="./images/flappy_thumbnail.png" /></a>
 </span>
 <span>
-      <img width="300" height="300" src="./images/pacman_thumbnail.png" />
-      <span style="background-color: beige; position: absolute; width: 300px; height: 300px; left: 125px; opacity: 0.4;"></span>
+      <a href="/pacman"><img width="300" height="300" src="./images/pacman_thumbnail.png" /></a>
+      <!-- <span style="background-color: beige; position: absolute; width: 300px; height: 300px; left: 125px; opacity: 0.4;"></span> -->
 </span>
 </div>
