--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <div style="padding : 0% 20%;margin: 10% 10%;">
 <span style=" margin: 5% 0;">
-    <a href="/flappy"><img width="300" height="300" src="./images/flappy_thumbnail.png" /></a>
+    <a href="/canvas-game/flappy"><img width="300" height="300" src="./images/flappy_thumbnail.png" /></a>
 </span>
 <span style=" margin: 5% 0; ">
-      <a href="/pacman"><img width="300" height="300" src="./images/pacman_thumbnail.png" /></a>
+      <a href="/canvas-game/pacman"><img width="300" height="300" src="./images/pacman_thumbnail.png" /></a>
       <!-- <span style="background-color: beige; position: absolute; width: 300px; height: 300px; left: 125px; opacity: 0.4;"></span> -->
 </span>
 </div>
